--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h1>オリジナルサイト</h1>
+  <p>はじめてのオリジナルサイトです！ようやく完成です！</p>  
 </body>
 </html>
